--- a/fr/modules/ROOT/pages/commands/Inverser.adoc
+++ b/fr/modules/ROOT/pages/commands/Inverser.adoc
@@ -18,9 +18,8 @@ Inverser( <Matrice> )::
 
 *Exemple :*
 
-`++Inverser({{1, 2}, {3, 4}})++` retourne stem:[\left(\begin\{array}-2 & 1\\1.5 & -0.5\end\{array} \right)], la matrice
-inverse de stem:[\left(\begin\{array}1 & 2\\3 & 4\end\{array} \right)].
-
+`++Inverser({{1, 2}, {3, 4}})++` retourne stem:[\begin{pmatrix}-2 & 1\\1.5 & -0.5\end{pmatrix}], la matrice
+inverse de stem:[\begin{pmatrix}1 & 2\\3 & 4\end{pmatrix}]
 ====
 
 Inverser( <Fonction> )::
@@ -80,9 +79,8 @@ Inverser( <Matrice> )::
 
 *Exemple :*
 
-`++Inverser({{a, b}, {c, d}})++` retourne stem:[\left(\begin\{array}\frac{d}\{ad- bc} & \frac{-b}\{ad- bc}\\
-\frac{-c}\{ad- bc}& \frac{a}{ ad- bc}\end\{array} \right)], la matrice inverse de stem:[\left(\begin\{array}a & b\\c
-& d\end\{array} \right)].
+`++Inverser({{a, b}, {c, d}})++` retourne stem:[\begin\{pmatrix}\frac{d}{ad- bc} & \frac{-b}{ad- bc}\\
+\frac{-c}{ad- bc}& \frac{a}{ ad- bc}\end\{pmatrix}], la matrice inverse de stem:[\begin{pmatrix}a & b\\c & d\end{pmatrix}].
 
 ====
 
