--- a/fr/modules/ROOT/pages/commands/Dimension.adoc
+++ b/fr/modules/ROOT/pages/commands/Dimension.adoc
@@ -12,11 +12,15 @@ Dimension( <Objet> )::
 
 La saisie de
 
-`++Dimension(A)++` retourne _2_ si _A_ est un point du plan ; `++Dimension(u)++` retourne _2_ si _u_ est un vecteur du
-plan ; `++Dimension(matrice1)++` retourne _\{3,2}_ si _matrice1_ est la matrice stem:[\left( \begin\{array}\{} 1 & 2 \\
-3 & 4 \\ 5 & 6 \\\end\{array} \right) ] ; `++Dimension((1,2))++` retourne _2_ ; `++Dimension({1,2})++` retourne _2_ ;
+`++Dimension(A)++` retourne _2_ si _A_ est un point du plan ; 
 
-`++Dimension({{1, 2}, {3, 4}, {5, 6}})++` retourne _\{3,2}_.
+`++Dimension(u)++` retourne _2_ si _u_ est un vecteur du plan ; 
+
+`++Dimension(matrice1)++` retourne _\{3,2}_ si _matrice1_ est stem:[\begin{pmatrix}1 & 2\\ 3 & 4 \\ 5 & 6 \end{pmatrix}] ; 
+
+`++Dimension((1,2))++` retourne _2_ ; `++Dimension({1,2})++` retourne _2_ ;
+
+`++Dimension({{1, 2}, {3, 4}, {5, 6}})++` retourne _{3,2}_.
 
 ====
 
@@ -34,6 +38,7 @@ dans GeoGebra :
 
 *Exemples :*
 
-`++Dimension({a,b})++` retourne _2_ ; `++Dimension({{a, b}, {c, d}, {e, f}})++` retourne _\{3, 2}_.
+`++Dimension({a,b})++` retourne _2_ ; 
+`++Dimension({{a, b}, {c, d}, {e, f}})++` retourne _{3, 2}_.
 
 ====
