--- a/fr/modules/ROOT/pages/Matrices.adoc
+++ b/fr/modules/ROOT/pages/Matrices.adoc
@@ -10,7 +10,7 @@ matrice.
 [EXAMPLE]
 ====
 
-Dans GeoGebra, \{\{1, 2, 3}, \{4, 5, 6}, \{7, 8, 9}} représente la matrice 3 stem:[ \times] 3
+Dans GeoGebra, {{1, 2, 3}, {4, 5, 6}, {7, 8, 9}} représente la matrice 3 stem:[ \times] 3
 stem:[\begin{pmatrix}1&2&3\\ 4&5&6\\ 7&8&9 \end{pmatrix}].
 
 ====
@@ -44,8 +44,7 @@ Validez dans le champ de saisie `++LateX[{{1, 2, 3}, {4, 5, 6}, {7, 8, 9}}]++` .
 [EXAMPLE]
 ====
 
-\{\{1,2},\{3,4},\{5,6}}*\{\{1,2,3},\{4,5,6}} vous donne la matrice \{\{9, 12, 15}, \{19, 26, 33}, \{29, 40,
-51}}.
+{{1,2},{3,4},{5,6}}*{{1,2,3},{4,5,6}} vous donne la matrice {{9, 12, 15}, {19, 26, 33}, {29, 40,51}}.
 
 ====
 
@@ -62,7 +61,7 @@ retourne un point comme résultat.
 [EXAMPLE]
 ====
 
-\{\{1,2},\{3,4}}*(3,4) vous donne le point A = (11, 25).
+{{1,2},{3,4}}*(3,4) vous donne le point A = (11, 25).
 
 ====
 
@@ -72,7 +71,7 @@ retourne un point comme résultat.
 [EXAMPLE]
 ====
 
-\{\{1,2,3},\{4,5,6},\{0,0,1}}*(1,2)donne le point A = (8, 20).
+{{1,2,3},{4,5,6},{0,0,1}}*(1,2)donne le point A = (8, 20).
 
 ====
 
@@ -93,8 +92,8 @@ image:Ambox_content.png[image,width=40,height=40]
 a|
 Pour diviser la matrice A par la matrice inversible B, n'utilisez pas A/B mais *A*Inverser[B]* ou *A*B^(-1)*.
 
-Soit matriceA = \{\{6, 2, 3}, \{4, 5, 6}, \{9, 8, 14}}, la matrice stem:[\begin{pmatrix}6&2&3\\4&5&6\\9&8&14\\
-\end{pmatrix}] et soit matriceB =\{\{3, 2, 1}, \{1, 1, 1}, \{3, 2, 2}}, la matrice
+Soit matriceA = {{6, 2, 3}, {4, 5, 6}, {9, 8, 14}}, la matrice stem:[\begin{pmatrix}6&2&3\\4&5&6\\9&8&14\\
+\end{pmatrix}] et soit matriceB ={{3, 2, 1}, {1, 1, 1}, {3, 2, 2}}, la matrice
 stem:[\begin{pmatrix}3&2&1\\1&1&1\\3&2&2\\ \end{pmatrix} ]
 
 `++matriceA/matriceB ++` vous retourne la matrice stem:[\begin{pmatrix}2&1&3\\4&5&6\\3&4&7\\ \end{pmatrix} ] obtenue
